--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </style>
 </head>
 <body>
-  <h1>WebGL Textured Globe</h1>
+  <h1>WebGL Messier Globe</h1>
   
   <div id="controls">
     <button id="toggle-texture">Toggle Texture</button>
@@ -76,6 +76,6 @@
     <canvas id="canvas" width="1024" height="1024"></canvas>
   </div>
   
-  <script src="webgldemo.bc.js"></script>
+  <script src="webglglobe.bc.js"></script>
 </body>
 </html>
